Doc/force-app/main/default/objects/Account_Plan_Key_Player2__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Plan Key Players</relationshipLabel>
    <relationshipName>Account_Plan_Key_Players</relationshipName>
    <type>Lookup</type>
</CustomField>