Doc/force-app/main/default/objects/Account_Plan_Key_Player2__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reports To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Plan Key Players (Reports To)</relationshipLabel>
    <relationshipName>Account_Plan_Key_Players1</relationshipName>
    <type>Lookup</type>
</CustomField>